--- a/poem.rmd
+++ b/poem.rmd
@@ -25,6 +25,12 @@ And this was odd, because it was
 ## Second Verse
 <!--Put the first five lines of a poem by Robert Frost here!-->
 
+Nature’s first green is gold,  
+Her hardest hue to hold.  
+Her early leaf’s a flower;  
+But only so an hour.  
+Then leaf subsides to leaf.  
+
 ## Third Verse
 <!--Put the first two verses of The Walrus and the Carpenter here!-->
 
